Final commit (famous last words...)

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -127,9 +127,9 @@ clone_median <- median(data_clone_stats$total)
 
 There are a total of **`r formatC(sum_of_NA, big.mark = ",")`** missing number of steps in this dataset. This represents **`r round(percentage_of_NA, digits = 1)`%** of the available data. 
 
-Missing values have been filled by replacing the mean number of steps for the appropriate interval found in the rest of the dataset. This dataset with interpolated missing values can be seen in **Figure 2**.
+Missing values have been filled by replacing the missing entry with the mean number of steps for the appropriate interval found in the rest of the dataset. This dataset with interpolated missing values can be seen in **Figure 2**.
 
-```{r}
+```{r, echo = TRUE}
 corrected <- hist(data_clone_stats$total, xlab = "Total number of steps", 
      main = "Figure 2 - Interpolated total number of steps over a two month period", 
      ylim = c(0,30), 
@@ -148,16 +148,16 @@ of November 2012 using correct data was **`r formatC(clone_mean, big.mark = ",",
 
 This makes a notable change to the results without correction shown in **Figure 1**. **Figure 3** shows the change in results of including interpolated values for missing data.
 
+
 ```{r, echo = TRUE}
 par(mfrow = c(1,2))
 plot(corrected,ylim = c(0,30), 
-     main = "With missing values", 
+     main = "Figure 4a) - With Nan", 
      xlab = "Number of Steps")
 plot(uncorrected, ylim = c(0,30), 
-     main = "Interpolated missing values",
+     main = "Figure 4b) - Replaced NaN",
      xlab = "Number of Steps")
 
-mtext("title", outer = TRUE, side = 3, cex = 1.5, line = 4)
 
 ```
 
@@ -165,7 +165,8 @@ The effect of interpolating missing values is to significantly reduce the freque
 
 ## Are there differences in activity patterns between weekdays and weekends?
 
-```{r, echo = TRUE}
+
+```{r, echo = TRUE, warning=FALSE, message=FALSE}
 
 daily_corrected <- data_clone %>%
         group_by(as.Date(date)) %>%
@@ -190,9 +191,26 @@ mean_weekends <- weekends %>%
 
 ```
 
-The activity patterns for Monday to Sunday over this period can be seen below in **Figure 4.**
+```{r, echo = TRUE, warning=FALSE, message=FALSE}
+data_clone$weekday <- weekdays(data_clone$date)
+data_clone$type_of_day <- sapply(data_clone$weekday, function(x) {
+                if(x == "Monday" | x == "Tuesday" | x == "Wednesday" | x == "Thursday" | x == "Friday") {return("Weekday")}
+                else {return("Weekend")}
+})
 
-```{r, echo = TRUE}
+type_of_day_summary <- data_clone %>%
+        group_by(type_of_day, interval) %>%
+        summarise(mean_steps = mean(as.numeric(steps), na.rm = TRUE))
+
+require(ggplot2)
+qplot(interval, mean_steps, data = type_of_day_summary, facets = type_of_day~., geom = "line", xlab = "Interval", ylab = "Mean Steps", main = "Figure 4 - Weekday vs. Weekend Activity Levels per 5 minute Interval ")
+```
+
+**Figure 4** shows the difference in the mean number of steps over the course of 24 hours for this dataset. Weekday activity seems to be more pronounced between 7:30 am and 10:am, perhaps correlating with commute time. General activity during waking hours over the weekend however, seems to be higher. 
+
+The activity patterns for Monday to Sunday over this period can be seen below in **Figure 5.**
+
+```{r, echo = TRUE, warning=FALSE, message=FALSE}
 
 all_week <- rbind(mean_weekdays, mean_weekends)
 DOW <- c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday")
@@ -204,7 +222,7 @@ colours <- c(rep("steelblue",5), rep("red",2))
 g <- ggplot(data = all_week, aes(x = day, y = mean_steps)) + geom_col(fill = colours)
 g <- g + xlab("Day of the Week")
 g <- g + ylab("Mean Number of Steps")
-g <- g + labs(title = "Figure 4 - Daily Comparison of Mean Steps")
+g <- g + labs(title = "Figure 5 - Daily Comparison of Mean Steps")
 show(g)
 
 ```
@@ -212,16 +230,16 @@ show(g)
 Both days of the weekend have higher mean activity levels compared to weekdays. There appears to be a significant decline in activity on a Tuesday and Thursday.
 This may suggest that the user is more active on a weekend, although other causes, such as consistent use during the week, would need to be ruled out first.
 
-**Figure 5** shows the dispersion for the data in question.
+**Figure 6** shows the dispersion for the data in question.
 
-```{r}
+```{r,echo = TRUE, warning=FALSE, message=FALSE}
 weekdays_weekends <- rbind(weekdays, weekends)
 weekdays_weekends$day <- factor(weekdays_weekends$day, levels = DOW)
 weekdays_weekends <- weekdays_weekends[order(weekdays_weekends$day),]
 
 p <- ggplot(weekdays_weekends, aes(x = day, y = total)) + geom_boxplot()
 p <- p + xlab("Day of the Week") + ylab("Total Daily Steps")
-p <- p + labs(title = "Figure 5 - Daily Total Steps by Weekday")
+p <- p + labs(title = "Figure 6 - Daily Total Steps by Weekday")
 show(p)
 ```
 
